# docker-fastapi-celery-mail

./: Dockerfile  LICENSE  README.md  app.py  backends.py  docker-compose.yml  pyproject.toml  worker.py
