[tool.poetry]
name = "celery_rest"
version = "0.1.0"
description = ""
authors = ["shpigunov"]

[tool.poetry.dependencies]
python = "^3.7"
celery = "^4.4.6"
fastapi = "^0.60.1"
uvicorn = "^0.11.6"
email-validator = "^1.1.2"
html2text = "^2020.1.16"
requests = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"